--- a/views/css/normalize.css
+++ b/views/css/normalize.css
@@ -139,7 +139,7 @@ sup {
 }
 
 ul {
-padding-inline-start: 0;
+  padding-inline-start: 0;
 }
 
 /* Embedded content
@@ -178,7 +178,8 @@ textarea {
  */
 
 button,
-input { /* 1 */
+input {
+  /* 1 */
   overflow: visible;
 }
 
@@ -188,7 +189,8 @@ input { /* 1 */
  */
 
 button,
-select { /* 1 */
+select {
+  /* 1 */
   text-transform: none;
 }
 
