--- a/views/css/global.css
+++ b/views/css/global.css
@@ -1,15 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap");
-
-:root {
-  --bg-color: #ffffff;
-  --body-color: #000000;
-  --primary-color: #da2839;
-}
+@import 'variables.css';
 
 body {
   font-family: "Nunito", sans-serif;
   font-size: 19px;
-  background-color: #fff;
+  background-color: var(--bg-color);
+  color: var(--body-color);
 }
 
 .container {
@@ -20,5 +16,10 @@ body {
 @media (min-width: 822px) {
   body {
     font-size: 16px;
+  }
+
+  .container {
+    max-width: 1300px;
+    margin: 0 auto;
   }
 }
