--- a/views/css/navigation.css
+++ b/views/css/navigation.css
@@ -51,6 +51,24 @@ nav ul.open li a {
   outline: none;
 }
 
+.top-module {
+	background-color: var(--primary-color);
+	padding: .5rem 0;
+	color: #fff;
+	text-align: center;
+	font-size: 1.2rem;
+}
+
+.breaking {
+	display: none;
+}
+
+.categories {
+	display: none;
+}
+
+
+
 @media (min-width: 822px) {
   nav {
     flex-wrap: nowrap;
@@ -91,5 +109,65 @@ nav ul.open li a {
 
   .hamburger {
     display: none;
+  }
+
+  .date {
+	  width: 95%;
+	  margin: auto;
+	  display: flex;
+	  justify-content: space-between;
+	}
+
+.breaking {
+	display: inline-flex;
+	color: #fff;
+	text-align: center;
+	font-size: 1.2rem;
+}
+
+
+.categories {
+	display: block;
+    background: var(--bg-inverse);
+  }
+  .categories ul {
+    color: var(--body-inverse);
+    display: flex;
+    list-style: none;
+	margin: 0;
+	justify-content: center;
+  }
+
+  .categories li {
+	max-width: 95%;
+	  padding: 1rem 1.5rem;
+	  text-transform: uppercase;
+	  font-weight: 700;
+  }
+  .categories li:hover {
+	  background: var(--bg-color);
+	  color: var(--body-color);
+	  padding: 1rem 1.5rem;
+	  -webkit-transition: all 0.6s ease;
+	  transition: all 0.6s ease;
+	  -webkit-ransition: all 0.6s ease;
+  }
+
+
+}
+
+@media (min-width: 1210px) {
+	.date {
+		max-width: 1200px;
+		margin: auto;
+  }
+
+  .categories-list {
+	  max-width: 1200px;
+	  margin: auto;
+  }
+
+  .categories ul {
+	justify-content: space-between;
   }
 }
