--- a/views/css/global.css
+++ b/views/css/global.css
@@ -1,29 +1,38 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap");
-@import 'variables.css';
 
+/* Import variables
+   ========================================================================== */
+@import "variables.css";
+
+* {
+    margin: 0;
+    box-sizing: border-box;
+}
 body {
-  font-family: "Nunito", sans-serif;
-  font-size: 19px;
-  background-color: var(--bg-color);
-  color: var(--body-color);
+    font-family: "Nunito", sans-serif;
+    font-size: 19px;
+    background-color: var(--bg-color);
+    color: var(--body-color);
 }
 
 .container {
-  max-width: 90%;
-  margin: 0 auto;
+    max-width: 90%;
+    margin: 0 auto;
 }
 
+/* Tablets
+   ========================================================================== */
 @media (min-width: 822px) {
-  body {
-    font-size: 16px;
-  }
-
-
+    body {
+        font-size: 16px;
+    }
 }
 
+/* Desktops and beyond
+   ========================================================================== */
 @media (min-width: 1210px) {
-	.container {
-		max-width: 1200px;
-		margin: auto;
-  }
+    .container {
+        max-width: 1200px;
+        margin: auto;
+    }
 }
