--- a/views/css/article-grid.css
+++ b/views/css/article-grid.css
@@ -1,25 +1,15 @@
-.flex-item {
-    position: relative;
-    width: 100%;
+.top-stories {
+    margin-top: 2rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    gap: 20px;
 }
-/* Original image */
-.flex-item img {
-    display: block;
-    width: 100%;
-    height: auto;
-}
-/* Original text overlay */
-.flex-item .exerpt {
-    color: #fff;
-    font-size: 30px;
-    line-height: 1.5em;
-    text-shadow: 2px 2px 2px #000;
-    text-align: center;
-    position: absolute;
-    top: 80%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
+
+.top-item {
+    padding: 1rem;
+    border-left: var(--primary-color) 10px solid;
+    background: rgba(161, 161, 161, 0.2);
 }
 
 .grid {
@@ -30,7 +20,7 @@
 }
 
 .grid-item {
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(161, 161, 161, 0.2);
     padding: 1rem;
     display: grid;
     grid-template-columns: 1fr;
@@ -39,39 +29,59 @@
     color: var(--body-color);
 }
 
-.grid-item img {
+.grid-item img,
+.top-item img {
     max-height: 100%;
     width: 100%;
     display: block;
     margin-bottom: 1rem;
 }
 
-.grid-item div {
+.grid-item div,
+.top-item div {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.grid-item .publishedDate {
+.top-item div {
+    padding: 0.5rem 0;
+}
+
+.grid-item .publishedDate,
+.top-item .publishedDate {
     color: rgb(177, 176, 176);
     font-size: 0.9rem;
     font-weight: 700;
 }
 
-.grid-item span {
+.grid-item span,
+.top-item span {
     background: var(--primary-color);
     color: #fff;
     padding: 0 0.5rem;
     letter-spacing: 0.2rem;
     text-shadow: 2px 2px #000;
     font-weight: 700;
+    text-transform: uppercase;
 }
 
-.grid-item h3 {
+.grid-item .author-likes,
+.top-item .author-likes {
+    font-size: 0.9rem;
+}
+
+.fa-heart:hover {
+    color: var(--primary-color);
+}
+
+.grid-item h3,
+.top-item h3 {
     margin-top: 1rem;
 }
 
-.grid-item p {
+.grid-item p,
+.top-item p {
     letter-spacing: 0.06rem;
     line-height: 1.8rem;
 }
@@ -79,8 +89,12 @@
 /* Tablets
    ========================================================================== */
 @media (min-width: 1100px) {
-    .grid-item p {
+    .grid-item p,
+    .top-item p {
         letter-spacing: 0.06rem;
         line-height: 1.4rem;
+    }
+    .top-stories {
+        grid-template-columns: 2fr 1fr;
     }
 }
