--- a/views/css/footer.css
+++ b/views/css/footer.css
@@ -1,22 +1,27 @@
+/* Import variables
+   ========================================================================== */
+@import "variables.css";
+
 footer {
     background: #000;
     margin-top: 3rem;
-    border-top: 5px solid red;
+    border-top: 5px solid var(--primary-color);
 }
 
 .footer-links {
     display: flex;
     flex-direction: column;
-    color: white;
+    color: var(--light-gray-color);
     padding: 2rem;
 }
 
-.footer-links div {
+.footer-links .footer-column {
     margin-top: 2rem;
 }
 
 .footer-links h3 {
     text-transform: uppercase;
+    color: #fff;
 }
 
 .footer-links ul {
@@ -31,12 +36,21 @@ footer {
 }
 
 .footer-links li:last-child {
-    border-bottom: 0;
+    border-bottom: 0 solid #202020;
+}
+
+.footer-links a {
+    color: var(--light-gray-color);
+    text-decoration: none;
+}
+
+.footer-links a:hover {
+    color: var(--white-color);
 }
 
 footer p {
     text-align: center;
-    color: white;
+    color: var(--white-color);
     padding: 2rem;
     letter-spacing: 0.2rem;
 }
