--- a/views/css/navigation.css
+++ b/views/css/navigation.css
@@ -133,10 +133,10 @@ nav ul.open li a {
 
     .categories {
         display: block;
-        background: var(--bg-inverse);
+        background: var(--black-color);
     }
     .categories ul {
-        color: var(--body-inverse);
+        color: var(--light-gray-color);
         display: flex;
         list-style: none;
         margin: 0;
@@ -150,8 +150,8 @@ nav ul.open li a {
         font-weight: 700;
     }
     .categories li:hover {
-        background: var(--bg-color);
-        color: var(--body-color);
+        background: var(--white-color);
+        color: var(--black-color);
         padding: 1rem 1.5rem;
         -webkit-transition: all 0.6s ease;
         transition: all 0.6s ease;
