--- a/views/css/variables.css
+++ b/views/css/variables.css
@@ -1,12 +1,21 @@
+/* Global variables
+   ========================================================================== */
+:root {
+    --black-color: #000000;
+    --white-color: #ffffff;
+    --light-gray-color: #979ea6;
+    --primary-color: #da2839;
+    --lighter-gray-color: #dadada;
+}
+
 /* For the night owls
    ========================================================================== */
 @media (prefers-color-scheme: dark) {
     :root {
         --bg-color: #050402;
-        --body-color: #fff;
-        --primary-color: #da2839;
-        --body-inverse: #000;
-        --bg-inverse: #fff;
+        --body-color: #ffffff;
+        --body-inverse: #000000;
+        --bg-inverse: #ffffff;
     }
 }
 
@@ -14,10 +23,9 @@
    ========================================================================== */
 @media (prefers-color-scheme: light) {
     :root {
-        --bg-color: #fff;
-        --body-color: #000;
-        --primary-color: #da2839;
-        --body-inverse: #fff;
-        --bg-inverse: #000;
+        --bg-color: #ffffff;
+        --body-color: #000000;
+        --body-inverse: #ffffff;
+        --bg-inverse: #000000;
     }
 }
