--- a/views/css/article-page.css
+++ b/views/css/article-page.css
@@ -6,8 +6,9 @@
     margin: 0;
 }
 
-.article-body .title {
+h1 {
     margin: 1rem 0 0.5rem;
+    line-height: 3rem;
 }
 
 .article-body .metadata {
@@ -25,13 +26,23 @@
     margin-top: 2rem;
 }
 
+.article-content p {
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
 .article-sidebar {
     margin-top: 2rem;
     border-top: 5px solid var(--lighter-gray-color);
 }
 
+.article-sidebar h3 {
+    margin-top: 2rem;
+    color: grey;
+}
+
 .social {
-    margin-top: 1rem;
+    margin: 1rem 0;
     display: flex;
     justify-content: space-around;
     font-size: 2rem;
