--- a/views/css/footer.css
+++ b/views/css/footer.css
@@ -62,6 +62,6 @@ footer p {
         flex-direction: row;
         justify-content: space-between;
         padding: 1rem;
-        margin-bottom: 2rem;
+        margin: 2rem auto;
     }
 }
