--- a/views/css/global.css
+++ b/views/css/global.css
@@ -12,8 +12,21 @@
 body {
     font-family: "Nunito", sans-serif;
     font-size: 19px;
+    letter-spacing: 0.06rem;
+    line-height: 1.8rem;
     background-color: var(--bg-color);
     color: var(--body-color);
+}
+
+h3 {
+    margin-bottom: 1rem;
+    text-transform: capitalize;
+    /*color: var(--body-color);*/
+    text-decoration: none;
+}
+
+h3:hover {
+    color: var(--light-gray-color);
 }
 
 .container {
@@ -26,6 +39,7 @@ body {
 @media (min-width: 822px) {
     body {
         font-size: 18px;
+        letter-spacing: 0.02rem;
     }
 }
 
