--- a/views/css/navigation.css
+++ b/views/css/navigation.css
@@ -49,6 +49,7 @@ nav ul.open li a {
     border: 0;
     cursor: pointer;
     font-size: 1.3rem;
+    color: var(--body-color);
 }
 
 .hamburger:focus {
@@ -136,7 +137,7 @@ nav ul.open li a {
         background: var(--black-color);
     }
     .categories ul {
-        color: var(--light-gray-color);
+        color: var(--categories-nav);
         display: flex;
         list-style: none;
         margin: 0;
