--- a/views/css/global.css
+++ b/views/css/global.css
@@ -21,12 +21,30 @@ body {
 h3 {
     margin-bottom: 1rem;
     text-transform: capitalize;
-    /*color: var(--body-color);*/
     text-decoration: none;
 }
 
-h3:hover {
+h4 {
+    text-decoration: none;
+    color: var(--body-color);
+}
+
+h3:hover,
+h4:hover {
     color: var(--light-gray-color);
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+a {
+    text-decoration: none;
+}
+
+a img:hover {
+    opacity: 0.8;
 }
 
 .container {
